@@ -5,6 +5,8 @@ ikiwiki (2.72) UNRELEASED; urgency=low
   * camelcase: Add camelcase_ignore setting.
   * googlecalendar: Add runtime deprecation warning.
   * comments: Deal with users entering unqualified or partial urls.
+  * inline: Run format hook first, to ensure other format hooks can affect
+    inlined content.  Closes: #509710
 
  -- Joey Hess <joeyh@debian.org>  Mon, 22 Dec 2008 19:02:16 -0500
 
